# pytagged

./: .gitignore  CHANGELOG.md  README.md  cli.py  pytagged.py  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
pytagged/: _mode.py  _utils.py  app.py  cli.py  nline.py  options.py  pytagged.py  utils.py
test/: conftest.py  test_cli.py  test_nline.py
test/pytagged/: test_nline.py  test_pytagged.py
test_files/: expected_hello.py  expected_hello_skip.py  expected_hello_slow.py  expected_triple_quote.py  hello_no_block.py  triple_quote.py
test_files/multiples/: expected_fake_block.py
test_files/multiples/src/: triple_quote.py
test_files/singles/: fake_block.py  hello.py
test_files/singles/src/: triple_quote_single.py
