[metadata]
name = pytagged
version = attr: pytagged.__version__
description = Auto comment cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ntn9995/pytagged
author = 1Karus
maintainer = 1Karus
keywords = cli, console
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = pytagged
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    pytag = pytagged.cli:main

[flake8]
exclude =
    .git,
    env
    test_files

ignore =
    # H306: imports not in alphabetical order (time, os)
    H306,
    # H403: multi line docstrings should end on a new line
    H403,
    # W292: no newline at EOF
    W292,
    # E231: missing whitespace after ':'
    E231,
    # E252: missing whitespace around parameter equals
    E252

max-line-length = 85